Fixed: incorrect .gitignore for demo/main.tscn and card_engine/icon.png

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 .import/**
 *.import
-default_env.tres
-icon.png
-project.godot
-lookat_camera.gd
-main.tscn
+/default_env.tres
+/icon.png
+/project.godot
+/main.tscn
