--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -5,7 +5,7 @@ platform="Windows Desktop"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.cardengine,*.data"
 exclude_filter=""
 export_path="../releases/CardEngine/Windows/CardEngine.exe"
 script_export_mode=1
@@ -39,3 +39,28 @@ application/product_name=""
 application/file_description=""
 application/copyright=""
 application/trademarks=""
+
+[preset.1]
+
+name="HTML5"
+platform="HTML5"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter="*.cardengine,*.data"
+exclude_filter=""
+export_path="../releases/CardEngine/HTML/index.html"
+script_export_mode=1
+script_encryption_key=""
+
+[preset.1.options]
+
+custom_template/debug=""
+custom_template/release=""
+variant/export_type=0
+vram_texture_compression/for_desktop=true
+vram_texture_compression/for_mobile=false
+html/custom_html_shell=""
+html/head_include=""
+html/canvas_resize_policy=2
+html/experimental_virtual_keyboard=false
